# aemi

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  README.md  README_KO.md  build.py  build_manual.md  install.sh  plan.md
.github/workflows/: release.yml  sync-version.yml
builder/: __init__.py  config.py  executor.py
docs/: slash_commands.md  slash_commands_ko.md
npm/aemi/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
src/: main.rs
src/services/: agent.rs  bot_common.rs  claude.rs  codex.rs  discord.rs  formatter.rs  gemini.rs  mod.rs  oh_my_pi.rs  opencode.rs  provider_common.rs  session.rs  telegram.rs  utils.rs
src/services/discord/: chat.rs  commands.rs  formatting.rs  messages.rs  mod.rs  tests.rs
src/services/telegram/: chat.rs  commands.rs  markdown.rs  messages.rs  mod.rs  tests.rs
website/: README.md  index.html  package-lock.json  package.json
website/src/components/: AIShowcase.tsx  AllInOne.tsx  Features.tsx  Footer.tsx  Hero.tsx  TelegramShowcase.tsx  TerminalPreview.tsx
website/src/components/ec2/: EC2Page.tsx
website/src/components/macos/: MacOSPage.tsx
website/src/components/tutorial/: TutorialPage.tsx
website/src/components/tutorial/sections/: AICommands.tsx  BasicNavigation.tsx  BookmarksHelp.tsx  FileOperations.tsx  FileSelection.tsx  GettingStarted.tsx  GitIntegration.tsx  ImageViewer.tsx  InterfaceOverview.tsx  PanelSystem.tsx  RemoteConnections.tsx  (+4 more)
website/src/components/workflows/: WorkflowsPage.tsx
